Revert "fix: Add word wrap to avoid text overflow"
This reverts commit 431031308cb3bfcb258526a6f3665b1c27181c45.

--- a/src/app/stack/card-details/component-information/component-information.component.less
+++ b/src/app/stack/card-details/component-information/component-information.component.less
@@ -141,8 +141,3 @@
         }
     }
 }
-.wrap-text {
-    display:block;
-    max-width:130px;
-    word-wrap:break-word;
-}
